Remove old malmutate
We all hate it so we're taking a leaf out of Gooncrawl's book.

Partially remove monster Malmutate

Removes Malmutate from nequxecs and cacodemons, the two most common
malmutaters (thanks to the overuse of demons throughout Extended and
summoners).

Nequoxecs get Paralyze, to match their 'mind flayer' theme. This should be
a threat at lower levels, but easily resisted by late-game characters (a
single pip of MR reduces success rate to 35%, two pips to 10%, etc.).

Cacodemons get Entropic Weave, to synergize with their digging and adding
to their 'disrupt the player from bigger threats' toolset.

This should reduce Malmutate enough to test to see if it needs to be
changed/removed from orbs of fire/shining eyes (as well as if Mnoleg needs
malmutate on hit removed).

(cherry picked from commit 15298a4ded55fc89561f5a8eb9934c3134e019ac)

Change Malmutate spell effect

From mutating the player to deteriorating all the players stats by
1+(1d4, average of 2 rolls). This will only affect Orbs of Fire as they
are the only monster left that has the Malmutate spell and I'm too lazy
to change the name in the source code for everything. This only affects
the spell version of Malmutate, not any other version that may exist
(i.e. Mnoleg melee, spell miscasts, etc).

Also left a note for myself to look into at some point.

(cherry picked from commit a2afb6c259e3b450e53f4dd65fb524583356f8c3)

Tone done new Malmutate

Waaaaaay too rough, oops

(cherry picked from commit 0d295a6d73b7014d2814741962ae627de7b1b361)

Give shining eyes Polymorph instead of Malmutate

Fits the theme of slimes and form changing while getting rid of the
Malmutate devil. Also upped the spellpower per HD of Polymorph for
monster casting, which hopefully shouldn't matter as only shining eyes
can cast it normally. Might need to tweak down the modifier a bit if it
is too extreme, but wanted to make sure they were still a threat.

(cherry picked from commit 3c9b759b45d4f420ddbd22d0fa63e83be52bfc

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -50,6 +50,9 @@ Changes swiped from other variants
 ----------------------------------
 bcrawl:
 * Chaos Knights are always Xom's playthings.
+Gooncrawl:
+* Malmutate is gone; nexos got paralyse, cacos entropic weave, shining eyes
+  polymorph. OOFs got Corrupting Pulse and the new stat draining malmutate.
 
 Stoat Soup 0.22 "Spirits of the Dead"
 -------------------------------------
