Make morningstars and eveningstars two-handed for small races
The following is a table of what weapons were two-handed or unusable for
small races for each of the main weapon classes:

  Weapon class     | Two-handed            | Unusable
 ------------------+-----------------------+--------------------
  Long blades      | Double swords         | Great swords
                   |                       | Triple swords
  Axes             | Broad axes            | Battleaxes,
                   |                       | Executioner's axes
  Maces            | None                  | Dire flails,
                   |                       | Great maces
  Polearms         | Tridents,             | Halberds, Glaives,
                   | Demon tridents        | Bardiches

It is clear from this that small races have all two-handed weapons
(except staves) for larger races made unusable, and the heaviest
one-handed weapons made two-handed with the exception of maces.
Maces already have the best one-handed weapons in the game for raw
single-target damage, eveningstars, so it seems that the heaviest
one-handed weapons for maces should also be made two-handed like every
other weapon class -- therefore that is what we do in this commit, with
morningstars and eveningstars.

This helps to balance out each of the weapon classes for small races; it
is still true that maces are a very good option, because demon whips
exist, and long blades are also good because of demon blades and
riposte. Axes and polearms are still as unappealing as they always were.
It is no longer true that maces have the two best one-handed weapons for
small races by a long way, though.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -40,12 +40,13 @@ Changes swiped from other variants
 ----------------------------------
 bcrawl:
 Ash curses items for free, but uncursing costs piety.
-Stoat Soup then reduces the "items cursed" element of Ash piety gain on low D
-levels in a way that gives similar piety gain to a vanilla character who found
-the average number of RC scrolls.
-This prevents you cursing all your stuff very early and getting lots
-of bonus piety obviating the uncursing penalty.
-Even on low D levels, higher bondage levels give some extra piety gain.
+ Stoat Soup then reduces the "items cursed" element of Ash piety gain on low D
+ levels in a way that gives similar piety gain to a vanilla character who found
+ the average number of RC scrolls.
+ This prevents you cursing all your stuff very early and getting lots
+ of bonus piety obviating the uncursing penalty.
+ Even on low D levels, higher bondage levels give some extra piety gain.
+Small species cannot use morningstars and eveningstars.
 
 Vanilla changes messed around with
 ----------------------------------
