--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -21,6 +21,8 @@ Wear-ID amulets with impunity:
  of piety has been gained while wearing it - on average, 3 points. However, it
  drains at most 1/5 of your piety on removal, and cannot drain more piety than
  was gained while wearing it.
+Permabuffs:
+ Well, permabuff - Infusion now lasts forever.
 
 Vanilla changes messed around with
 ----------------------------------
