Shroud of Golubria is now a permabuff
Spellpower now increases the effectiveness of the buff, from an average
10HP absorbed up to 15; max spellpower changed to 50. (In vanilla, it
goes to 200 but spellpower in no way changes the effectiveness, just the
duration - and the duration is capped at 50 turns in a way that even with
modest spellpower the odds of getting 50 turns are good; at 100 spellpower
there is only a circa 9% chance of not getting 50 turns.)

There are no miscast checks when gaining a benefit. Instead, when the
shroud fizzles on taking a hit, it starts to build up 2MP out of your
MP regeneration, and when they are built up, it tries to recast itself.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -22,7 +22,7 @@ Wear-ID amulets with impunity:
  drains at most 1/5 of your piety on removal, and cannot drain more piety than
  was gained while wearing it.
 Permabuffs:
- Well, permabuff - Infusion now lasts forever.
+ Infusion and Shroud of Golubria last forever.
 
 Vanilla changes messed around with
 ----------------------------------
