Excruciating Wounds as a permabuff
This one was a pain. Also, document Charms status, better Regen status
light for bloodless vampires, nominal_duration changes (keep the caps iff
spellpower has other important effects), fix to spell uselessness check.

I suspect this one is buggy.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -22,15 +22,12 @@ Wear-ID amulets with impunity:
  drains at most 1/5 of your piety on removal, and cannot drain more piety than
  was gained while wearing it.
 Permabuffs:
- Infusion, Shroud of Golubria, Regeneration, Portal Projectile, Deflect
- Missiles, and Song of Slaying last forever. If you can't see any monsters, you
- mutter the words of the Song of Slaying under your breath, and don't make any
- noise. 
-
- DMsl has ongoing hunger and MP costs, but at a lower rate than it did when it
- was duration-based in vanilla (vanilla has gone from duration to fizzles on
- being attacked, Shroud-style; here it can still fizzle on being attacked so
- is given a long nominal duration.)
+Infusion, Shroud of Golubria, Regeneration, Portal Projectile,
+Deflect Missiles, Excruciating Wounds, and Song of Slaying last
+forever. If you can't see any monsters, you mutter the words of the
+Song of Slaying under your breath, and don't make any noise. Deflect
+Missiles and Shroud of Golubria automagically restore themselves when
+enemy attacks break them.
 
 Vanilla changes messed around with
 ----------------------------------
