ID weapons of disto from acquirement or god gifts automatically (Sair)
This is a rare and incredibly vexing occurrence that leads to boring-
but-optimal play around god gifts rather than them sparking joy, so we
eliminate it; if you get a weapon of distortion from acquirement or a
god, you know what you got.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -22,12 +22,14 @@ Wear-ID amulets with impunity:
  drains at most 1/5 of your piety on removal, and cannot drain more piety than
  was gained while wearing it.
 Permabuffs:
-Infusion, Song of Slaying, Shroud of Golubria, Regeneration, Portal
-Projectile, Deflect Missiles, Excruciating Wounds, and Death Channel
-last forever. If you can't see any monsters, you mutter the words of
-the Song of Slaying under your breath, and don't make any
-noise. Deflect Missiles and Shroud of Golubria automagically restore
-themselves when enemy attacks break them.
+ Infusion, Song of Slaying, Shroud of Golubria, Regeneration, Portal
+ Projectile, Deflect Missiles, Excruciating Wounds, and Death Channel
+ last forever. If you can't see any monsters, you mutter the words of
+ the Song of Slaying under your breath, and don't make any
+ noise. Deflect Missiles and Shroud of Golubria automagically restore
+ themselves when enemy attacks break them.
+When you acquire or are god gifted a weapon of distortion, it is identified
+as such automatically.
 
 Vanilla changes messed around with
 ----------------------------------
