--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -28,8 +28,8 @@ Permabuffs:
  the Song of Slaying under your breath, and don't make any
  noise. Deflect Missiles and Shroud of Golubria automagically restore
  themselves when enemy attacks break them.
-When you acquire or are god gifted a weapon of distortion, it is identified
-as such automatically.
+When you acquire or are (non-Xom) god gifted a weapon of distortion, it
+is identified as such automatically.
 
 Vanilla changes messed around with
 ----------------------------------
