--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -23,11 +23,11 @@ Wear-ID amulets with impunity:
  was gained while wearing it.
 Permabuffs:
  Infusion, Song of Slaying, Shroud of Golubria, Regeneration, Portal
- Projectile, Deflect Missiles, Excruciating Wounds, and Death Channel
- last forever. If you can't see any monsters, you mutter the words of
- the Song of Slaying under your breath, and don't make any
- noise. Deflect Missiles and Shroud of Golubria automagically restore
- themselves when enemy attacks break them.
+ Projectile, Deflect Missiles, Excruciating Wounds, Death Channel, and
+ Ring of Flames last forever. If you can't see any monsters, you
+ mutter the words of the Song of Slaying under your breath, and don't
+ make any noise. Deflect Missiles and Shroud of Golubria automagically
+ restore themselves when enemy attacks break them.
 When you acquire or are (non-Xom) god gifted a weapon of distortion, it
 is identified as such automatically.
 
