Formicids cannot cast Swiftness
This has been a long-standing bone of contention in vanilla (see Mantis
issue 7786) because the original formicid restrictions were a somewhat
arbitary duplication of the effects of the now-gone amulet of stasis.

After a short discussion we were 2/3 in favour of removal.

This does not prevent swiftness from other sources but AFAICT at the
moment there aren't any.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -31,6 +31,7 @@ Permabuffs:
  them.
 When you acquire or are (non-Xom) god gifted a weapon of distortion or item
 that is *Contam/*Fragile, it is identified as such automatically.
+Formicids cannot cast Swiftness.
 
 Changes swiped from other variants
 ----------------------------------
