All magical staves do extra dmaage based on spell skills
Power can bypass AC at the cost of an MP.

I'm not super happy with summoning - it's not a direct damage school
and the verb is kind of arbitary. (I have rejected CEB's suggestion of
"You fetch the <victim> one."
alas.)

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -32,6 +32,7 @@ Permabuffs:
 When you acquire or are (non-Xom) god gifted a weapon of distortion or item
 that is *Contam/*Fragile, it is identified as such automatically.
 Formicids cannot cast Swiftness.
+All magical staves do some kind of bonus damage in melee based on spell skills.
 
 Changes swiped from other variants
 ----------------------------------
