--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -33,6 +33,8 @@ When you acquire or are (non-Xom) god gifted a weapon of distortion or item
 that is *Contam/*Fragile, it is identified as such automatically.
 Formicids cannot cast Swiftness.
 All magical staves do some kind of bonus damage in melee based on spell skills.
+When incapacitated, you still lose SH from a shield, but keep half of mutation-
+based SH and all god/jewellery SH.
 
 Changes swiped from other variants
 ----------------------------------
