Revert "Remove boulder beetles"
And cause the boulder beetle traps to actually work - broken in _2012_ by
c84e800f13c701249b42b7bd0b973ebb697477b0, 4 years before removal.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -49,6 +49,9 @@ bcrawl:
   Even on low D levels, higher bondage levels give some extra piety gain.
 * Small species cannot use morningstars and eveningstars.
 
+Gooncrawl:
+* Restore boulder beetles.
+
 Vanilla changes messed around with
 ----------------------------------
 * Zin cures mutations on a gift timeout, so cannot be used to lock in a good
