Let Fo wield GC/GSC
I don't really agree with the rationale in
9a20582491d1faf1c514505fb416b674ec8ee87f
in particular, it's not clear to me that a GC is _that_ much better than
the great mace a Fo could be using instead compared to the amount of
benefit lost from a shield - this is a very different tradeoff to that on
an Og, where you have to downgrade to a morningstar or thereabouts to get
the shield benefit.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -31,7 +31,7 @@ Stoat Soup 0.22
   them.
 * When you acquire or are (non-Xom) god gifted a weapon of distortion or item
   that is *Contam/*Fragile, it is identified as such automatically.
-* Formicids cannot cast Swiftness.
+* Formicids cannot cast Swiftness, but can use giant clubs.
 * All magical staves do some kind of bonus damage in melee based on spell
   skills. 
 * When incapacitated, you still lose SH from a shield, but keep half of
