Revert "Don't allow scarves to generate as random artefacts"
... and make randart scarves have a normal scarf ego base, _and_ add
a new scarf of warding, with the old warding effect (which returns to
Cekugob) plus rN+ MR+, as a result of our agonising over whether a scarf
with MR++ would be too good.

This is all bundled together in one commit - sorry - because the first
implementation of this was no good, and there's a rebase here blotting that
out.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -76,6 +76,10 @@ Vanilla changes messed around with
 * ghosts still roam the dungeon, but now they know who killed them, and
   emerge as neutral monsters seeking vengeance.
 * Labyrinth loot unchanged; minotaurs got armour, javs, +20 MR.
+* Some removed artifacts are unremoved - Cekugob, Doom Knight, Eternal Torment,
+  Hat of the High Council.
+* Scarves can be artifacts, always based on a normal scarf ego. Add a new
+  scarf of warding, which gives rN+, MR+, and the old warding effect.
 
 Vanilla changes not made
 ------------------------
