Weapons of chaos cannot polymorph monsters to shapeshifters.
They're bad enough as it is without this effect, which is almost always
going to stiff you if it hits early enough.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -36,6 +36,9 @@ Stoat Soup 0.22
   skills. 
 * When incapacitated, you still lose SH from a shield, but keep half of
   mutation-based SH and all god/jewellery SH.
+* Weapons of chaos cannot turn monsters into shapeshifters. This is a rare
+  effect, but would almost always stiff you if it hit in the early game;
+  weapons of chaos are bad enough already.
 
 Changes swiped from other variants
 ----------------------------------
