--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -31,6 +31,7 @@ Stoat Soup 0.22
   them.
 * When you acquire or are (non-Xom) god gifted a weapon of distortion or item
   that is *Contam/*Fragile, it is identified as such automatically.
+  ... but *Fragile is now replaced with *Curse (which is not identified).
 * Formicids cannot cast Swiftness, but can use giant clubs.
 * All magical staves do some kind of bonus damage in melee based on spell
   skills. 
