--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -16,6 +16,8 @@ Vanilla changes messed around with
 * The 0.24 Throwing rework is pulled forward; however, boomerangs don't
   always return (it's skill-based as before), penetration is a separate
   brand on javelins, and steel is kept not silver.
+* The 0.25 acquirement rework is pulled forward; however, you are offered
+  4 items (plus gold and money) one of which might be a misc evocable.
 
 Stoat Soup 0.22
 ---------------
