Wand stacking and identification.
Revert "Remove a few references to wasting charges"
Revert "Don't show identified wands in the identification scroll menu (reddit)"

Increase charges for clouds, scattershot; decrease digging

These wands did not exist before the removal of wand identification, so
unlike other wands where that change increased expected charges and our
recent reversion of it reduced them again, the reversion causes a net
decrease which this corrects.

Vanilla did decrease digging above and beyond correcting the net increase
of ID removal, so we also decrease digging.

Add a facility to arrange objects that have "chains" of like objects
hanging off them. Bear in mind presently much of this facility is wand
specific.

Make messages about monsters zapping wands less chatty

Also, fix the "Ijyb zaps a wand / the puff of flame hits you /
it is a wand of flame" message sequence which I think is a
legacy of when monsters zapping wands didn't automatically
ID them.

Tweak the messages a bit, and allow you to ID a wand before wasting charges,
as a slight relaxation of charge consumption.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -1,3 +1,14 @@
+Stoat Soup 0.23
+---------------
+
+Vanilla changes messed around with
+----------------------------------
+* Wands stack as in 0.20, but are identified by scrolls or Evocations as
+  in 0.19, with unIDed use wasting charges. The maximum charges on clouds
+  and scattershot was increased to compensate. The reduction vanilla made
+  in wand charges that effectively compensated for never wasting any was
+  not made, but their additional reduction in digging charges was.
+
 Stoat Soup 0.22
 ---------------
 
