Let chaos knights keep Xom after switching religion
A bcrawl change reworked partly to improve player information but
also to avoid the question of residual penance if you go to Zin
altogether by ruling Zin won't take ex-CKs as worshippers at all.
(cherry picked from commit 3c2327e9340aa14ae842e0c6f9219aeab7687727)
(cherry picked from commit 3cec57d2cde85927b0e6d4911678c21333dccd68)
(cherry picked from commit e2ac4cca4c3108237052f28a678e877b8ef6f594)
(cherry picked from commit ae0776f9ac008b35478783e75fb75b7d9993323b)
(cherry picked from commit 763d74be7e7fc7c1176a98e43dba20f4f8ceab12)
(cherry picked from commit 9aa2f586b530d77e57b78a04406758377d75f3c4)

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -34,6 +34,11 @@ Vanilla changes messed around with
   monster you hit when martially attacking >1 monster gets an accuracy penalty.
 * The "corpse sense" given to necromancers is also given to Yred worshippers.
 
+Changes swiped from other variants
+----------------------------------
+bcrawl:
+* Chaos Knights are always Xom's playthings.
+
 Stoat Soup 0.22 "Spirits of the Dead"
 -------------------------------------
 
