--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -13,6 +13,9 @@ Vanilla changes messed around with
   Mennas's silence, and having an effect similar to holy word on silent
   spectres (who, if dazed, are not silenced).
 * The stone of tremors is restored along with the disc of storms.
+* The 0.24 Throwing rework is pulled forward; however, boomerangs don't
+  always return (it's skill-based as before), penetration is a separate
+  brand on javelins, and steel is kept not silver.
 
 Stoat Soup 0.22
 ---------------
