--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -17,7 +17,8 @@ Vanilla changes messed around with
   always return (it's skill-based as before), penetration is a separate
   brand on javelins, and steel is kept not silver.
 * The 0.25 acquirement rework is pulled forward; however, you are offered
-  4 items (plus gold and money) one of which might be a misc evocable.
+  4 items (plus gold and money) one of which might be a misc evocable. A 
+  cancelled acquirement times out after 500 turns.
 
 Stoat Soup 0.22
 ---------------
