--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -19,6 +19,9 @@ Vanilla changes messed around with
 * The 0.25 acquirement rework is pulled forward; however, you are offered
   4 items (plus gold and money) one of which might be a misc evocable. A 
   cancelled acquirement times out after 500 turns.
+* The Brooch of Shielding is returned to its old AC/EV/warding combo, and
+  Robustness and Phasing are perhaps a little more interesting than just
+  being extra good rings of evasion / protection.
 
 Stoat Soup 0.22
 ---------------
