Make evokable invisibility drain skills
Evocable invisibility is a very powerful and potentially quite fun
effect. It has a correspondingly high Evocations skill requirement
to remove its failure chance.

However, that failure chance rarely mattered in practice. There was
no real cost to repeatedly evoking invisibility at 70% failure while
around the corner from enemies. That was strong, but not particularly
fun.

Evoking invisibility now applies moderate skill drain to the player,
regardless of whether the evocation succeeds. This both discourages
high-failure-rate evocation and makes the ability *slightly* weaker in
general. (Of course, as Ru shows, one mustn't overestimate the impact
of drain!)

The current drain value is a first pass - it should be adjusted as
appropriate per player experience.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -23,6 +23,7 @@ Vanilla changes messed around with
   brand on javelins, and steel is kept not silver.
 * The 0.25 acquirement rework is pulled forward; however, you can still be
   offered evocables. Acquirement times out after 500 turns if not used.
+* The 0.26 feature that evocable invisibility drains you is pulled forward.
 * The Brooch of Shielding is returned to its old AC/EV/warding combo, and
   Robustness and Phasing are perhaps a little more interesting than just
   being extra good rings of evasion / protection.
