--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -28,6 +28,8 @@ Vanilla changes messed around with
 * The Brooch of Shielding is returned to its old AC/EV/warding combo, and
   Robustness and Phasing are perhaps a little more interesting than just
   being extra good rings of evasion / protection.
+* WJC loses pin other than during Serpent's Lash / Heavenly Storm, but any
+  monster you hit when martially attacking >1 monster gets an accuracy penalty.
 
 Stoat Soup 0.22 "Spirits of the Dead"
 -------------------------------------
