Chei assessment of delay works strictly on movement speed
There were some oddities in the previous arrangement, most obviously
that how a monster's speed was defined in mon-data.h could make a
difference to how much Chei valued killing it.

Chei will now give no piety for kills of stationary monsters (becoming
consistent with the way Slouch doesn't damage them) but will give piety
for kills of fast monsters that happen to be unable to move right now.

Chei also loves torpor snails.

--- a/crawl-ref/docs/changelog.txt
+++ b/crawl-ref/docs/changelog.txt
@@ -10,6 +10,8 @@ Stoat Soup 0.23 "The Masque of the Red Death"
 * Weapons of pain enable training Necromancy; staves enable their schools.
 * Non-Gozag food shops are now "supply shops" which also sell ammo. They
   would sell other non-magical consumables if we thought of any.
+* Chei's assessment of the speed delta for piety and slouch is based purely
+  on movement speed; no piety for Roxanne or oklobs, sorry.
 
 Vanilla changes messed around with
 ----------------------------------
